--- a/package.json
+++ b/package.json
@@ -16,5 +16,16 @@
   "bugs": {
     "url": "https://github.com/joshuamarknanninga/social-network-api/issues"
   },
-  "homepage": "https://github.com/joshuamarknanninga/social-network-api#readme"
+  "homepage": "https://github.com/joshuamarknanninga/social-network-api#readme",
+  "keywords": [],
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "connect-session-sequelize": "^7.1.7",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "express-handlebars": "^7.1.3",
+    "express-session": "^1.18.1",
+    "pg": "^8.13.0",
+    "sequelize": "^6.37.4"
+  }
 }
