--- a/package.json
+++ b/package.json
@@ -27,5 +27,10 @@
     "express-session": "^1.18.1",
     "pg": "^8.13.0",
     "sequelize": "^6.37.4"
+  },
+  "devDependencies": {
+    "eslint": "^9.12.0",
+    "globals": "^15.11.0",
+    "typescript-eslint": "^8.9.0"
   }
 }
