--- a/package.json
+++ b/package.json
@@ -19,18 +19,11 @@
   "homepage": "https://github.com/joshuamarknanninga/social-network-api#readme",
   "keywords": [],
   "dependencies": {
-    "bcrypt": "^5.1.1",
     "connect-session-sequelize": "^7.1.7",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "express-handlebars": "^7.1.3",
-    "express-session": "^1.18.1",
-    "pg": "^8.13.0",
-    "sequelize": "^6.37.4"
+    "express": "^4.17.1",
+    "mongoose": "^8.0.0"
   },
   "devDependencies": {
-    "eslint": "^9.12.0",
-    "globals": "^15.11.0",
-    "typescript-eslint": "^8.9.0"
+    "nodemon": "^2.0.9"
   }
 }
